syntax = "proto3";

service GRPCControlService {
  rpc Forward(MoveRequest) returns (MoveResponse) {}

  rpc Backward(MoveRequest) returns (MoveResponse) {}

  rpc Left(MoveRequest) returns (MoveResponse) {}

  rpc Right(MoveRequest) returns (MoveResponse) {}

  rpc TurnClockwise(MoveRequest) returns (TurnResponse) {}

  rpc TurnAntiClockwise(MoveRequest) returns (TurnResponse) {}
}

service GRPCDataService {
  rpc GetMetrics(MetricRequest) returns (MetricResponse) {}

  rpc SetPosition(PositionRequest) returns (PositionResponse) {}
}

message MoveRequest {
  uint32 step = 1;
}

message MoveResponse {
  bool status = 1;
}

message TurnRequest {
  uint32 angle = 1;
}

message TurnResponse {
  bool status = 1;
}

message MetricRequest {
  // Sensor ID. Leave this field at default value (0) to fetch all metric data
  uint32 id = 1;
}

message MetricResponse {
  map<uint32, double> values = 1;
}

message PositionRequest {
  // Period for getting position info. This field is only for `StreamGetMetrics`.
  uint32 x = 1;
  uint32 y = 2;
}

message PositionResponse {
  bool status = 1;
}
